flex/02-flex-header/style.css
.header  {
  font-family: monospace;
  background: papayawhip;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 8px;
}

.logo {
  font-size: 48px;
  font-weight: 900;
  color: tomato;
  background: white;
  padding: 4px 32px;
  align-self: center;

}

ul {
  /* this removes the dots on the list items*/
  list-style-type: none;
  display: flex;
  flex: 1;
}

a {
  font-size: 22px;
  background: white;
  padding: 8px;
  /* this removes the line under the links */
  text-decoration: none;
  margin: 8px;
}

